kubernetes/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: nba-voting
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
